# qml

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  FINAL_PHASE_PLAN.md  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE_BENCHMARKS.md  PRODUCTION_DEPLOYMENT.md  README.md  VERIFICATION_SUMMARY.md  install.sql
examples/: automated_migration.rs  axum_integration.rs  basic_job.rs  custom_migrations.rs  dashboard_demo.rs  postgres_simple.rs  processing_demo.rs  storage_demo.rs
src/: error.rs  lib.rs
src/core/: job.rs  job_state.rs  mod.rs
src/dashboard/: mod.rs  routes.rs  server.rs  service.rs  websocket.rs
src/processing/: activator.rs  mod.rs  processor.rs  retry.rs  scheduler.rs  server.rs  worker.rs
src/storage/: config.rs  database_init.rs  error.rs  memory.rs  mod.rs  postgres.rs  redis.rs  settings.rs  test_locking.rs
tests/: axum_integration_test.rs  config_panic_fix_test.rs  environment_variables_test.rs  storage_integration_tests.rs  unit_tests.rs
tests/unit/: job_state_tests.rs  job_tests.rs  mod.rs
