[package]
name = "qml-rs"
version = "0.1.4-alpha"
edition = "2024"
authors = ["QML Contributors"]
description = "A Rust implementation of QML background job processing"
license = "MIT"
repository = "https://github.com/queue-me-later/qml"
keywords = ["background", "jobs", "async", "queue", "worker"]
categories = ["asynchronous", "web-programming"]
exclude = ["examples/*", "tests/*"]

[dependencies]
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
redis = { version = "0.32.4", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
], optional = true }
tokio-util = "0.7"
fastrand = "2.3"

# Dashboard and web server dependencies
axum = { version = "0.8.4", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.27.0"                                  # For WebSocket support
futures-util = "0.3"

# PostgreSQL storage support
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "migrate",
    "chrono",
    "uuid",
    "json",
], optional = true }
# Future cron job support
# cron = { version = "0.12", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
futures = "0.3"            # For join_all in concurrency tests

[features]
default = []
# Storage backend features
postgres = ["sqlx"]
redis = ["dep:redis"]
# Future features for later phases
# cron-jobs = ["cron"]

[[example]]
name = "basic_job"
path = "examples/basic_job.rs"

[[example]]
name = "storage_demo"
path = "examples/storage_demo.rs"

[[example]]
name = "dashboard_demo"
path = "examples/dashboard_demo.rs"

[[example]]
name = "processing_demo"
path = "examples/processing_demo.rs"

[[example]]
name = "postgres_simple"
path = "examples/postgres_simple.rs"

[[example]]
name = "custom_migrations"
path = "examples/custom_migrations.rs"
